--- a/ahobic/app/views/companies/index.html.erb
+++ b/ahobic/app/views/companies/index.html.erb
@@ -8,4 +8,7 @@ companies controller の indexのview
   <li>
     <%= link_to "仕入先登録", supplier_new_companies_path, class: 'get' %>
   </li>
+  <li>
+    <%= link_to "情報変更", edit_companies_path, class: 'get' %>
+  </li>
 </ul>
