--- a/ahobic/app/views/users/registrations/new.html.erb
+++ b/ahobic/app/views/users/registrations/new.html.erb
@@ -4,8 +4,8 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.label :usercode %><br />
+    <%= f.text_field :usercode, autofocus: true, autocomplete: "usercode" %>
   </div>
 
   <div class="field">
