why dont submit

--- a/ahobic/app/views/companies/create.html.erb
+++ b/ahobic/app/views/companies/create.html.erb
@@ -1,3 +1,4 @@
-<%= @companys.each do |comp| %>
-<%= puts comp %>
-<% end %>
+得意先取引申請書
+<%= @create_comp.company_name %>
+
+<input type="button" value="このページを印刷" onclick="window.print();">
