--- a/ahobic/app/views/companies/index.html.erb
+++ b/ahobic/app/views/companies/index.html.erb
@@ -9,6 +9,6 @@ companies controller の indexのview
     <%= link_to "仕入先登録", supplier_new_companies_path, class: 'get' %>
   </li>
   <li>
-    <%= link_to "情報変更", edit_companies_path, class: 'get' %>
+    <%= link_to "情報変更", pre_edit_companies_path, class: 'get' %>
   </li>
 </ul>
