--- a/ahobic/app/views/companies/create.html.erb
+++ b/ahobic/app/views/companies/create.html.erb
@@ -2,3 +2,5 @@
 <%= @create_comp.company_name %>
 
 <input type="button" value="このページを印刷" onclick="window.print();">
+
+<%= link_to "ホームへ", root_path, class: 'get' %>
